# pyeomp

./: README.md  pyproject.toml
.github/workflows/: main.yml
pyeomp/: __init__.py  bundle.py  cli_options.py  errors.py  pygeoapi_plugin.py  record.py  util.py
pyeomp/eomp/: ets.py
pyeomp/resources/: ets-report.json  worldcereal_inference2.json
tests/: __init__.py  test_eomp_ets.py  util.py
