[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeomp"
version = "0.1.0"
description = "A Python validator for the EOEPCA Metadata Profile (EOMP)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["EOEPCA", "metadata", "test suite"]
authors = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
    {name = "Angelos Tzotsos", email = "tzotsos@gmail.com"}
]
maintainers = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
    {name = "Angelos Tzotsos", email = "tzotsos@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
    "click",
    "jsonschema",
    "rfc3339-validator",
    "rfc3987",
    "shapely"
]

[project.optional-dependencies]
dev = ["flake8"]
test = ["pytest"]
release = ["build", "twine", "wheel"]

[project.scripts]
pyeomp = "pyeomp:cli"

[project.urls]
homepage = "https://github.com/EOEPCA/pyeomp"
source = "https://github.com/EOEPCA/pyeomp"
documentation = "https://github.com/EOEPCA/pyeomp"
issues = "https://github.com/EOEPCA/pyeomp/issues"

[tool.setuptools.package-data]
"pyeomp" = ["*.json", "*.txt"]
